:zap: feat: rentabilidade diaria por ativo